# nativedatachannels

./: README.md  settings.gradle.kts
convention-plugins/src/main/kotlin/: module.publication.gradle.kts  root.publication.gradle.kts
gradle/: libs.versions.toml
nativedatachannels/: build.gradle.kts
nativedatachannels/artifacts/iosArm64/: libdatachannel_native_api.h
nativedatachannels/cinterop/libdatachannel/: libdatachannel.def
nativedatachannels/src/androidMain/kotlin/uk/frontendlabs/nativedatachannels/: Rtc.android.kt
nativedatachannels/src/commonJvm/cpp/: CMakeLists.txt  build_linux.sh  build_macos.sh  build_windows.sh  native-lib.cpp
nativedatachannels/src/commonJvm/kotlin/uk/frontendlabs/nativedatachannels/: LibDatachannels.kt  NativeFileReader.kt  Rtc.kt  RtcCommon.kt  RtcConfiguration.kt  RtcDataChannel.kt  RtcPeerConnection.kt  RtcTrack.kt  RtcWebSocket.kt  RtcWebSocketServer.kt  WordGenerator.kt
nativedatachannels/src/commonJvm/kotlin/uk/frontendlabs/nativedatachannels/peer/: Peer.kt  PeerMessage.kt  PeerServer.kt
nativedatachannels/src/commonMain/kotlin/: config.kt  datachannel.kt  libdatachannel.common.kt
nativedatachannels/src/jvmMain/kotlin/: Main.kt
nativedatachannels/src/jvmMain/kotlin/uk/frontendlabs/nativedatachannels/: Rtc.jvm.kt
